tests/borrowck/valid/basic.vit
space tests/borrowck/valid/basic

proc main() -> int {
  let value = 1;
  let copied = value;
  give copied;
}
