tests/borrowck/invalid/move_after_move.vit
space tests/borrowck/invalid/move_after_move

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> Box {
  let value = make_box();
  let first = value;
  let second = value;
  give second;
}
